--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
@@ -34,8 +35,8 @@
     "globals": "^15.9.0",
     "jsdom": "^25.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
     "prettier": "^3.3.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^7.3.1",
